build: fix tests requiring test classes from other modules